@@ -24,15 +24,12 @@
 
 /*
  * @test
- * @enablePreview
  * @modules java.base/jdk.internal.foreign
  * @run testng/othervm TestSegmentAllocators
  */
 
 import java.lang.foreign.*;
 
-import jdk.internal.foreign.MappedMemorySegmentImpl;
-import jdk.internal.foreign.NativeMemorySegmentImpl;
 import org.testng.annotations.*;
 
 import java.lang.foreign.Arena;
@@ -47,6 +44,8 @@ import java.nio.LongBuffer;
 import java.nio.ShortBuffer;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiFunction;
 import java.util.function.Function;
@@ -82,7 +81,7 @@ public class TestSegmentAllocators {
                         assertEquals(address.byteSize(), alignedLayout.byteSize());
                         addressList.add(address);
                         VarHandle handle = handleFactory.apply(alignedLayout);
-                        assertEquals(value, handle.get(address));
+                        assertEquals(value, handle.get(address, 0L));
                     }
                     boolean isBound = allocationFactory.isBound();
                     try {
@@ -102,6 +101,16 @@ public class TestSegmentAllocators {
     }
 
     static final int SIZE_256M = 1024 * 1024 * 256;
+
+    @Test(expectedExceptions = IllegalArgumentException.class)
+    public void testReadOnlySlicingAllocator() {
+        SegmentAllocator.slicingAllocator(MemorySegment.ofArray(new int[0]).asReadOnly());
+    }
+
+    @Test(expectedExceptions = IllegalArgumentException.class)
+    public void testReadOnlyPrefixAllocator() {
+        SegmentAllocator.prefixAllocator(MemorySegment.ofArray(new int[0]).asReadOnly());
+    }
 
     @Test
     public void testBigAllocationInUnboundedSession() {
@@ -148,12 +157,12 @@ public class TestSegmentAllocators {
 
     @Test(dataProvider = "allocators", expectedExceptions = IllegalArgumentException.class)
     public void testBadAllocationArrayNegSize(SegmentAllocator allocator) {
-        allocator.allocateArray(ValueLayout.JAVA_BYTE, -1);
+        allocator.allocate(ValueLayout.JAVA_BYTE, -1);
     }
 
     @Test(dataProvider = "allocators", expectedExceptions = IllegalArgumentException.class)
     public void testBadAllocationArrayOverflow(SegmentAllocator allocator) {
-        allocator.allocateArray(ValueLayout.JAVA_LONG,  Long.MAX_VALUE);
+        allocator.allocate(ValueLayout.JAVA_LONG,  Long.MAX_VALUE);
     }
 
     @Test(expectedExceptions = OutOfMemoryError.class)
@@ -163,28 +172,122 @@ public class TestSegmentAllocators {
         }
     }
 
+    @Test(expectedExceptions = IllegalArgumentException.class,
+            expectedExceptionsMessageRegExp = ".*Heap segment not allowed.*")
+    public void testArenaAllocateFromHeapSegment() {
+        try (Arena arena = Arena.ofConfined()) {
+            var heapSegment = MemorySegment.ofArray(new int[]{1});
+            arena.allocateFrom(ValueLayout.ADDRESS, heapSegment);
+        }
+    }
+
+    @Test(expectedExceptions = IllegalArgumentException.class,
+            expectedExceptionsMessageRegExp = ".*Heap segment not allowed.*")
+    public void testAllocatorAllocateFromHeapSegment() {
+        try (Arena arena = Arena.ofConfined()) {
+            SegmentAllocator allocator = SegmentAllocator.prefixAllocator(arena.allocate(16));
+            var heapSegment = MemorySegment.ofArray(new int[]{1});
+            allocator.allocateFrom(ValueLayout.ADDRESS, heapSegment);
+        }
+    }
+
+    // Invariant checking tests for the SegmentAllocator method:
+    // MemorySegment allocateFrom(ValueLayout elementLayout,
+    //                            MemorySegment source,
+    //                            ValueLayout sourceElementLayout,
+    //                            long sourceOffset,
+    //                            long elementCount) {
+    @Test
+    public void testAllocatorAllocateFromArguments() {
+        try (Arena arena = Arena.ofConfined()) {
+            var sourceElements = 2;
+            var source = arena.allocate(ValueLayout.JAVA_LONG, sourceElements);
+            var elementLayout = ValueLayout.JAVA_INT;
+            var sourceElementLayout = ValueLayout.JAVA_INT;
+
+            // IllegalArgumentException if {@code elementLayout.byteSize() != sourceElementLayout.byteSize()}
+            assertThrows(IllegalArgumentException.class, () ->
+                    arena.allocateFrom(elementLayout, source, ValueLayout.JAVA_BYTE, 0, 1)
+            );
+
+            // IllegalArgumentException if source segment/offset
+            // are <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a>
+            // in the source element layout
+            assertThrows(IllegalArgumentException.class, () ->
+                    arena.allocateFrom(elementLayout, source.asSlice(1), sourceElementLayout, 0, 1)
+            );
+            assertThrows(IllegalArgumentException.class, () ->
+                    arena.allocateFrom(elementLayout, source, sourceElementLayout, 1, 1)
+            );
+
+            // IllegalArgumentException if {@code elementLayout.byteAlignment() > elementLayout.byteSize()}
+            assertThrows(IllegalArgumentException.class, () ->
+                    arena.allocateFrom(elementLayout.withByteAlignment(elementLayout.byteAlignment() * 2), source, sourceElementLayout, 1, 1)
+            );
+
+            // IllegalStateException if the {@linkplain MemorySegment#scope() scope} associated
+            // with {@code source} is not {@linkplain MemorySegment.Scope#isAlive() alive}
+            // This is tested in TestScopedOperations
+
+            // WrongThreadException if this method is called from a thread {@code T},
+            // such that {@code source.isAccessibleBy(T) == false}
+            CompletableFuture<Arena> future = CompletableFuture.supplyAsync(Arena::ofConfined);
+            try {
+                Arena otherThreadArena = future.get();
+                assertThrows(WrongThreadException.class, () ->
+                        otherThreadArena.allocateFrom(elementLayout, source, sourceElementLayout, 0, 1)
+                );
+            } catch (ExecutionException | InterruptedException e) {
+                fail("Unable to create arena", e);
+            }
+
+            // IllegalArgumentException if {@code elementCount * sourceElementLayout.byteSize()} overflows
+            assertThrows(IllegalArgumentException.class, () ->
+                    arena.allocateFrom(elementLayout, source, sourceElementLayout, 0, Long.MAX_VALUE)
+            );
+
+            // IndexOutOfBoundsException if {@code sourceOffset > source.byteSize() - (elementCount * sourceElementLayout.byteSize())}
+            assertThrows(IndexOutOfBoundsException.class, () ->
+                    arena.allocateFrom(elementLayout, source, sourceElementLayout, source.byteSize() - (1 * sourceElementLayout.byteAlignment()) + elementLayout.byteSize(), 1)
+            );
+
+            // IndexOutOfBoundsException if {@code sourceOffset < 0}
+            assertThrows(IndexOutOfBoundsException.class, () ->
+                    arena.allocateFrom(elementLayout, source, sourceElementLayout, -elementLayout.byteSize(), 1)
+            );
+
+            // IllegalArgumentException if {@code elementCount < 0}
+            assertThrows(IllegalArgumentException.class, () ->
+                    arena.allocateFrom(elementLayout, source, sourceElementLayout, 0, -1)
+            );
+
+
+        }
+    }
+
+
     @Test
     public void testArrayAllocateDelegation() {
         AtomicInteger calls = new AtomicInteger();
         SegmentAllocator allocator = new SegmentAllocator() {
             @Override
             public MemorySegment allocate(long bytesSize, long byteAlignment) {
-                return null;
+                return MemorySegment.NULL;
             }
 
             @Override
-            public MemorySegment allocateArray(MemoryLayout elementLayout, long count) {
+            public MemorySegment allocateFrom(ValueLayout elementLayout, MemorySegment source, ValueLayout sourceElementLayout, long sourceOffset, long elementCount) {
                 calls.incrementAndGet();
-                return null;
-            };
+                return MemorySegment.NULL;
+            }
         };
-        allocator.allocateArray(ValueLayout.JAVA_BYTE);
-        allocator.allocateArray(ValueLayout.JAVA_SHORT);
-        allocator.allocateArray(ValueLayout.JAVA_CHAR);
-        allocator.allocateArray(ValueLayout.JAVA_INT);
-        allocator.allocateArray(ValueLayout.JAVA_FLOAT);
-        allocator.allocateArray(ValueLayout.JAVA_LONG);
-        allocator.allocateArray(ValueLayout.JAVA_DOUBLE);
+        allocator.allocateFrom(ValueLayout.JAVA_BYTE);
+        allocator.allocateFrom(ValueLayout.JAVA_SHORT);
+        allocator.allocateFrom(ValueLayout.JAVA_CHAR);
+        allocator.allocateFrom(ValueLayout.JAVA_INT);
+        allocator.allocateFrom(ValueLayout.JAVA_FLOAT);
+        allocator.allocateFrom(ValueLayout.JAVA_LONG);
+        allocator.allocateFrom(ValueLayout.JAVA_DOUBLE);
         assertEquals(calls.get(), 7);
     }
 
@@ -193,7 +296,6 @@ public class TestSegmentAllocators {
         AtomicInteger calls = new AtomicInteger();
         SegmentAllocator allocator = new SegmentAllocator() {
             @Override
-
             public MemorySegment allocate(long byteSize, long byteAlignment) {
                 return Arena.ofAuto().allocate(byteSize, byteAlignment);
             }
@@ -204,7 +306,7 @@ public class TestSegmentAllocators {
                 return allocate(size, 1);
             };
         };
-        allocator.allocateUtf8String("Hello");
+        allocator.allocateFrom("Hello");
         assertEquals(calls.get(), 1);
     }
 
@@ -242,7 +344,7 @@ public class TestSegmentAllocators {
                 assertThrows(UnsupportedOperationException.class, segment::isLoaded);
                 assertThrows(UnsupportedOperationException.class, segment::force);
                 assertFalse(segment.isMapped());
-                assertEquals(segment.isNative(), segment instanceof NativeMemorySegmentImpl);
+                assertTrue(segment.isNative());
             }
         }
     }
@@ -252,52 +354,52 @@ public class TestSegmentAllocators {
         List<Object[]> scalarAllocations = new ArrayList<>();
         for (AllocationFactory factory : AllocationFactory.values()) {
             scalarAllocations.add(new Object[] { (byte)42, factory, ValueLayout.JAVA_BYTE,
-                    (AllocationFunction.OfByte) SegmentAllocator::allocate,
+                    (AllocationFunction.OfByte) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { (short)42, factory, ValueLayout.JAVA_SHORT.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfShort) SegmentAllocator::allocate,
+                    (AllocationFunction.OfShort) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { (char)42, factory, ValueLayout.JAVA_CHAR.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfChar) SegmentAllocator::allocate,
+                    (AllocationFunction.OfChar) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { 42, factory,
                     ValueLayout.JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfInt) SegmentAllocator::allocate,
+                    (AllocationFunction.OfInt) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { 42f, factory, ValueLayout.JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfFloat) SegmentAllocator::allocate,
+                    (AllocationFunction.OfFloat) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { 42L, factory, ValueLayout.JAVA_LONG.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfLong) SegmentAllocator::allocate,
+                    (AllocationFunction.OfLong) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { 42d, factory, ValueLayout.JAVA_DOUBLE.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfDouble) SegmentAllocator::allocate,
+                    (AllocationFunction.OfDouble) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { MemorySegment.ofAddress(42), factory, ValueLayout.ADDRESS.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfAddress) SegmentAllocator::allocate,
+                    (AllocationFunction.OfAddress) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
 
             scalarAllocations.add(new Object[] { (short)42, factory, ValueLayout.JAVA_SHORT.withOrder(ByteOrder.LITTLE_ENDIAN),
-                    (AllocationFunction.OfShort) SegmentAllocator::allocate,
+                    (AllocationFunction.OfShort) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { (char)42, factory, ValueLayout.JAVA_CHAR.withOrder(ByteOrder.LITTLE_ENDIAN),
-                    (AllocationFunction.OfChar) SegmentAllocator::allocate,
+                    (AllocationFunction.OfChar) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { 42, factory,
                     ValueLayout.JAVA_INT.withOrder(ByteOrder.LITTLE_ENDIAN),
-                    (AllocationFunction.OfInt) SegmentAllocator::allocate,
+                    (AllocationFunction.OfInt) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { 42f, factory, ValueLayout.JAVA_FLOAT.withOrder(ByteOrder.LITTLE_ENDIAN),
-                    (AllocationFunction.OfFloat) SegmentAllocator::allocate,
+                    (AllocationFunction.OfFloat) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { 42L, factory, ValueLayout.JAVA_LONG.withOrder(ByteOrder.LITTLE_ENDIAN),
-                    (AllocationFunction.OfLong) SegmentAllocator::allocate,
+                    (AllocationFunction.OfLong) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { 42d, factory, ValueLayout.JAVA_DOUBLE.withOrder(ByteOrder.LITTLE_ENDIAN),
-                    (AllocationFunction.OfDouble) SegmentAllocator::allocate,
+                    (AllocationFunction.OfDouble) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
             scalarAllocations.add(new Object[] { MemorySegment.ofAddress(42), factory, ValueLayout.ADDRESS.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfAddress) SegmentAllocator::allocate,
+                    (AllocationFunction.OfAddress) SegmentAllocator::allocateFrom,
                     (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
         }
         return scalarAllocations.toArray(Object[][]::new);
@@ -308,46 +410,46 @@ public class TestSegmentAllocators {
         List<Object[]> arrayAllocations = new ArrayList<>();
         for (AllocationFactory factory : AllocationFactory.values()) {
             arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_BYTE,
-                    (AllocationFunction.OfByteArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfByteArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toByteArray });
             arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_CHAR.withOrder(ByteOrder.LITTLE_ENDIAN),
-                    (AllocationFunction.OfCharArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfCharArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toCharArray });
             arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_SHORT.withOrder(ByteOrder.LITTLE_ENDIAN),
-                    (AllocationFunction.OfShortArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfShortArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toShortArray });
             arrayAllocations.add(new Object[] { factory,
                     ValueLayout.JAVA_INT.withOrder(ByteOrder.LITTLE_ENDIAN),
-                    (AllocationFunction.OfIntArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfIntArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toIntArray });
             arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_FLOAT.withOrder(ByteOrder.LITTLE_ENDIAN),
-                    (AllocationFunction.OfFloatArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfFloatArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toFloatArray });
             arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_LONG.withOrder(ByteOrder.LITTLE_ENDIAN),
-                    (AllocationFunction.OfLongArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfLongArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toLongArray });
             arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_DOUBLE.withOrder(ByteOrder.LITTLE_ENDIAN),
-                    (AllocationFunction.OfDoubleArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfDoubleArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toDoubleArray });
 
             arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_CHAR.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfCharArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfCharArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toCharArray });
             arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_SHORT.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfShortArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfShortArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toShortArray });
             arrayAllocations.add(new Object[] { factory,
                     ValueLayout.JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfIntArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfIntArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toIntArray });
             arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfFloatArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfFloatArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toFloatArray });
             arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_LONG.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfLongArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfLongArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toLongArray });
             arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_DOUBLE.withOrder(ByteOrder.BIG_ENDIAN),
-                    (AllocationFunction.OfDoubleArray) SegmentAllocator::allocateArray,
+                    (AllocationFunction.OfDoubleArray) SegmentAllocator::allocateFrom,
                     ToArrayHelper.toDoubleArray });
         };
         return arrayAllocations.toArray(Object[][]::new);
